--- a/index.html
+++ b/index.html
@@ -34,162 +34,176 @@
             </ul>
         </nav>
     </header>
-   
+
     <div class="interface">
-        <picture id="moon">
-            <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                <img src="iconsMoon.png" alt="">
-            </a>
-        </picture>
-        <section>
+        <a href="https://www.instagram.com/nike_developer/">
             <h1>
                 Eu sou o <strong style="color: gold;">NIKE</strong>
+                <picture id="verificado">
+                    <img src="verificado.png" alt="">
+                </picture>
             </h1>
-            <h1 style="margin-bottom: 50px;">
+        </a>
+        <section>
+                        <h1 style="margin-bottom: 50px;">
                 Sou fundador de uma empresa referência em desenvolvimento de
                 PROJETOS DE SOFTWARE
             </h1>
             <h2>
                 Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de
-                Desenvolvedores de <strong style="color: gold;">Sistemas</strong> para transformar centavos em <strong
-                    style="color: gold;">milhões</strong>
+                Desenvolvedores de <strong style="color: gold;">Sistemas</strong> para transformar centavos <picture
+                    id="dinheiro">
+                    <img src="real-brasileiro.png" alt="">
+                </picture> em <strong style="color: gold;">milhões</strong>
+                <picture id="dinheiro">
+                    <img src="financiamento.png" alt="">
+                </picture>
             </h2>
-            <section>
-                <h1>
-                    Segue abaixo alguns dos milhares de projetos WEB que já foram finalizados e deixamos como referência
-                    para você
-                </h1>
-                <label style="color: rgb(255, 174, 0); font-size: x-small;">
-                    RESUMINDO
-                    (CRIAMOS PLATAFORMAS PARA
-                    INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
-                    CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
-                </label>
-                <!-- <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+            <h1>
+                Segue abaixo alguns dos milhares de projetos WEB que já foram finalizados e deixamos como referência
+                para você
+            </h1>
+            <!-- <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
                     <button>
                         Netflix
                     </button>
                 </a> -->
-                <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
-                    <button>
-                        Duarte & Santos
-                    </button>
-                </a>
-                <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
-                    <button>
-                        Homem-Arranha
-                    </button>
-                </a>
-                <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
-                    <button>
-                        HOME PK DIGITAL PRODUCTS 1.0.4
-                    </button>
-                </a>
-                <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
-                    <button>
-                        Multiplanos
-                    </button>
-                </a>
-                <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
-                    <button>
-                        Android
-                    </button>
-                </a>
-                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
-                    <button>
-                        X
-                    </button>
-                </a>
-                <!-- <a href="https://pablo-kennediy.github.io/Instagram_pk_produtos/">
+            <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
+                <button>
+                    Duarte & Santos
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
+                <button>
+                    Homem-Arranha
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
+                <button>
+                    HOME PK DIGITAL PRODUCTS 1.0.4
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
+                <button>
+                    Multiplanos
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
+                <button>
+                    Android
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
+                <button>
+                    X
+                </button>
+            </a>
+            <!-- <a href="https://pablo-kennediy.github.io/Instagram_pk_produtos/">
                     <button>
                         Instagram
                     </button>
                 </a> -->
-                <a href="https://pablo-kennediy.github.io/Pk-Produtos---Facebook/" target="_blank">
-                    <button>
-                        Facebook
-                    </button>
-                </a>
-                <a href="https://pablo-kennediy.github.io/GoogleGlass-pkProducoes/" target="_blank">
-                    <button>
-                        Google Glass
-                    </button>
-                </a>
-                <h1>
-                    Segue abaixo alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimento.
-                </h1>
-                <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
-                    <button>
-                        Zap Selling
-                    </button>
-                </a>
-                <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
-                    <button>
-                        Guia do Programador
-                    </button>
-                </a>
-                <a href="https://pablo-kennediy.github.io/MUAY-THAI/" target="_blank">
-                    <button>
-                        Muay Thai
-                    </button>
-                </a>
-                <a href="https://pablo-kennediy.github.io/Whatsapp_PK_Produtos/" target="_blank">
-                    <button>
-                        Whatsapp Web
-                    </button>
-                </a>
-                <p style="color: red;">
-                    <strong>ATENÇÃO !</strong>
-                </p>
-                <p>
-                    Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
-                </p>
-                <p>
-                    Clique
-                    <a href="#form" target="_blank">
-                        <button type="button" id="ixd01">
+            <a href="https://pablo-kennediy.github.io/Pk-Produtos---Facebook/" target="_blank">
+                <button>
+                    Facebook
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/GoogleGlass-pkProducoes/" target="_blank">
+                <button>
+                    Google Glass
+                </button>
+            </a>
+            <h1>
+                Segue abaixo alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimento.
+            </h1>
+            <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
+                <button>
+                    Zap Selling
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
+                <button>
+                    Guia do Programador
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/MUAY-THAI/" target="_blank">
+                <button>
+                    Muay Thai
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Whatsapp_PK_Produtos/" target="_blank">
+                <button>
+                    Whatsapp Web
+                </button>
+            </a>
+            <p style="color: red;">
+                <strong>ATENÇÃO !</strong>
+            </p>
+            <label>
+                RESUMINDO
+                (CRIAMOS PLATAFORMAS PARA
+                INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
+                CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+            </label>
+            <p>
+                Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
+            </p>
+            <p>
+                Clique
+                <a href="#form" target="_blank">
+                    <button type="button" id="ixd01">
                         aqui
 
                     </button>
-                    </a> para
-                    acessar ao <strong style="color: gold;">formulario</strong> de inscrição.
-                </p>
-                <p>
-                    Aqui você vai encontrar um grupo de <strong style="color:gold;">Desenvolvedores, UI x
-                        UX</strong> e estrategistas de trafego <strong style="color: gold;">organico</strong> e
-                    <strong style="color:gold;">pago</strong> atuamos principalmente com a venda e revenda
-                    de
-                    scripts ou modelos.
-                </p>
-                <p>
-                    Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de
-                    computação e uma mistura de
-                    engenharia social.
-                </p>
-                <h1 id="form">
-                    <strong>
-                        Aguardo ancioso para um entrevista.
-                    </strong>
-                </h1>
-            </section>
+                </a> para
+                acessar ao <strong style="color: gold;">formulario</strong> de inscrição.
+            </p>
+            <p>
+                Aqui você vai encontrar um grupo de <strong style="color:gold;">Desenvolvedores, UI x
+                    UX</strong> e estrategistas de trafego <strong style="color: gold;">organico</strong> e
+                <strong style="color:gold;">pago</strong> atuamos principalmente com a venda e revenda
+                de
+                scripts ou modelos.
+            </p>
+            <p>
+                Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de
+                computação e uma mistura de
+                engenharia social.
+            </p>
+            <h1 id="form">
+                <strong>
+                    Aguardo ancioso para um entrevista.
+                </strong>
+            </h1>
+
             <p>
                 Clique
                 <a href="https://iplis.ru/meu-portifolio" target="_blank">
-                <button type="button" id="ixd01">
-                                            aqui
-                                    </button>
-            </a>
+                    <button type="button" id="ixd01">
+                        aqui
+                    </button>
+                </a>
                 para ter mais informações do nosso <strong style="color: gold;">Portifolio</strong>
             </p>
-            <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank"><img
+            <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img
                     style="border-radius: 15px;" src="digital.png" alt="digital"></a>
-            <iframe id="iframe"
-                src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
-                frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
         </section>
+        <picture id="moon">
+            <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+                <img src="iconsMoon.png" alt="">
+            </a>
+        </picture>
+        <iframe id="iframe"
+            src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
+            frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
     </div>
 
     <footer>
+        <picture id="redesSociais">
+            <img src="facebook.png" alt="">
+            <img src="instagram.png" alt="">
+            <img src="twitter.png" alt="">
+        </picture>
         <p>
             Desenvolvido por <a href="https://www.instagram.com/nike_developer/" target="_blank">Nike</a> usando
             linguagens de marcação
