--- a/index.html
+++ b/index.html
@@ -36,38 +36,45 @@
     </header>
 
     <div class="interface">
-        <a href="https://www.instagram.com/nike_developer/">
             <h1>
-                Eu sou o <strong style="color: gold;">NIKE</strong>
+                Eu sou o <strong><a href="https://www.instagram.com/nike_developer/">NIKE</strong>
                 <picture id="verificado">
                     <img src="verificado.png" alt="">
                 </picture>
+            </a>
             </h1>
-        </a>
         <section>
                         <h1 style="margin-bottom: 50px;">
                 Sou fundador de uma empresa referência em desenvolvimento de
-                PROJETOS DE SOFTWARE
+                projetos de software
             </h1>
             <h2>
                 Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de
-                Desenvolvedores de <strong style="color: gold;">Sistemas</strong> para transformar centavos <picture
+                Desenvolvedores de <strong style="color:black;text-decoration: underline gold;">Sistemas</strong> para transformar centavos <picture
                     id="dinheiro">
                     <img src="real-brasileiro.png" alt="">
-                </picture> em <strong style="color: gold;">milhões</strong>
+                </picture> em <strong style="color:black;text-decoration: underline gold;">milhões</strong>
                 <picture id="dinheiro">
                     <img src="financiamento.png" alt="">
                 </picture>
             </h2>
-            <h1>
-                Segue abaixo alguns dos milhares de projetos WEB que já foram finalizados e deixamos como referência
-                para você
-            </h1>
-            <!-- <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+            <picture id="grafico">
+                <img src="lucro.png" alt="">
+            </picture>
+            <p>
+                Lembrando que negociamos valores em uma reunião diretamente com o Programador 
+            </p>
+                              <p>
+                            Eles servem para você ter referências do nosso trabalho e ter a certeza absoluta que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos sonha em ter
+                        </p>
+                        <h1>
+                            Logo mais abaixo deixamos alguns dos milhares de projetos WEB que já foram finalizados.
+                                    </h1>
+            <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
                     <button>
                         Netflix
                     </button>
-                </a> -->
+                </a>
             <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
                 <button>
                     Duarte & Santos
