--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             </ul>
         </nav>
     </header>
-
     <div class="interface">
             <h1>
                 Eu sou o <strong><a href="https://www.instagram.com/nike_developer/">NIKE</strong>
@@ -70,6 +69,11 @@
                         <h1>
                             Logo mais abaixo deixamos alguns dos milhares de projetos WEB que já foram finalizados.
                                     </h1>
+                                    <a href="">
+                                        <button>
+                                            Barber shop platform
+                                        </button>
+                                    </a>
             <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
                     <button>
                         Netflix
