--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                         HOME
                     </li>
                 </a>
+                <a href="#prog">
+                    <li>MEUS PROJETOS</li>
+                </a>
                 <a href="#iframe">
                     <li>
                         FORMULARIO DE INSCRIÇÃO
@@ -28,7 +31,7 @@
                 </a>
                 <a href="https://iplis.ru/meu-portifolio">
                     <li>
-                        PORTIFOLIO DEV.NIKE
+                        NIKE
                     </li>
                 </a>
             </ul>
@@ -64,9 +67,9 @@
                 Lembrando que negociamos valores em uma reunião diretamente com o Programador 
             </p>
                               <p>
-                            Eles servem para você ter referências do nosso trabalho e ter a certeza absoluta que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos sonha em ter
+                            Eles servem para você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos sonha em ter
                         </p>
-                        <h1>
+                        <h1 id="prog">
                             Logo mais abaixo deixamos alguns dos milhares de projetos WEB que já foram finalizados.
                                     </h1>
                                     <a href="">
