--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     </li>
                 </a>
                 <a href="#prog">
-                    <li>MEUS PROJETOS</li>
+                    <li>PROJETOS</li>
                 </a>
                 <a href="#iframe">
                     <li>
-                        FORMULARIO DE INSCRIÇÃO
+                        NOS-CONTRATE
                     </li>
                 </a>
                 <a href="https://iplis.ru/meu-portifolio">
@@ -38,22 +38,22 @@
         </nav>
     </header>
     <div class="interface">
-            <h1>
-                Eu sou o <strong><a href="https://www.instagram.com/nike_developer/">NIKE</strong>
-                <picture id="verificado">
-                    <img src="verificado.png" alt="">
-                </picture>
+        <h1>
+            Eu sou o <strong><a href="https://www.instagram.com/nike_developer/">NIKE</strong>
+            <picture id="verificado">
+                <img src="verificado.png" alt="">
+            </picture>
             </a>
-            </h1>
+        </h1>
         <section>
-                        <h1 style="margin-bottom: 50px;">
+            <h1 style="margin-bottom: 50px;">
                 Sou fundador de uma empresa referência em desenvolvimento de
                 projetos de software
             </h1>
             <h2>
                 Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de
-                Desenvolvedores de <strong style="color:black;text-decoration: underline gold;">Sistemas</strong> para transformar centavos <picture
-                    id="dinheiro">
+                Desenvolvedores de <strong style="color:black;text-decoration: underline gold;">Sistemas</strong> para
+                transformar centavos <picture id="dinheiro">
                     <img src="real-brasileiro.png" alt="">
                 </picture> em <strong style="color:black;text-decoration: underline gold;">milhões</strong>
                 <picture id="dinheiro">
@@ -64,24 +64,26 @@
                 <img src="lucro.png" alt="">
             </picture>
             <p>
-                Lembrando que negociamos valores em uma reunião diretamente com o Programador 
+                Lembrando que negociamos valores em uma reunião diretamente com o Programador
             </p>
-                              <p>
-                            Eles servem para você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos sonha em ter
-                        </p>
-                        <h1 id="prog">
-                            Logo mais abaixo deixamos alguns dos milhares de projetos WEB que já foram finalizados.
-                                    </h1>
-                                    <a href="">
-                                        <button>
-                                            Barber shop platform
-                                        </button>
-                                    </a>
-            <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+            <p>
+                Eles servem para você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
+                que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site
+                profissional' que você a tempos sonha em ter
+            </p>
+            <h1 id="prog">
+                Logo mais abaixo deixamos alguns dos milhares de projetos WEB que já foram finalizados.
+            </h1>
+            <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+                <button>
+                    Barber shop platform
+                </button>
+            </a>
+            <!-- <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
                     <button>
                         Netflix
                     </button>
-                </a>
+                </a> -->
             <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
                 <button>
                     Duarte & Santos
@@ -94,7 +96,7 @@
             </a>
             <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
                 <button>
-                    HOME PK DIGITAL PRODUCTS 1.0.4
+                    CRM
                 </button>
             </a>
             <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
@@ -107,26 +109,26 @@
                     Android
                 </button>
             </a>
-            <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
+            <!-- <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
                 <button>
                     X
                 </button>
-            </a>
+            </a> -->
             <!-- <a href="https://pablo-kennediy.github.io/Instagram_pk_produtos/">
                     <button>
                         Instagram
                     </button>
                 </a> -->
-            <a href="https://pablo-kennediy.github.io/Pk-Produtos---Facebook/" target="_blank">
+            <!-- <a href="https://pablo-kennediy.github.io/Pk-Produtos---Facebook/" target="_blank">
                 <button>
                     Facebook
                 </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/GoogleGlass-pkProducoes/" target="_blank">
+            </a> -->
+            <!-- <a href="https://pablo-kennediy.github.io/GoogleGlass-pkProducoes/" target="_blank">
                 <button>
                     Google Glass
                 </button>
-            </a>
+            </a> -->
             <h1>
                 Segue abaixo alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimento.
             </h1>
@@ -140,16 +142,16 @@
                     Guia do Programador
                 </button>
             </a>
-            <a href="https://pablo-kennediy.github.io/MUAY-THAI/" target="_blank">
+            <!-- <a href="https://pablo-kennediy.github.io/MUAY-THAI/" target="_blank">
                 <button>
                     Muay Thai
                 </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Whatsapp_PK_Produtos/" target="_blank">
+            </a> -->
+            <!-- <a href="https://pablo-kennediy.github.io/Whatsapp_PK_Produtos/" target="_blank">
                 <button>
                     Whatsapp Web
                 </button>
-            </a>
+            </a> -->
             <p style="color: red;">
                 <strong>ATENÇÃO !</strong>
             </p>
@@ -211,7 +213,6 @@
             src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
             frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
     </div>
-
     <footer>
         <picture id="redesSociais">
             <img src="facebook.png" alt="">
