Arrumei os botões
.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
                     Barber shop platform
                 </button>
             </a>
+            <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
+                <button>
+                    Guia do Programador
+                </button>
+            </a>
             <!-- <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
                     <button>
                         Netflix
@@ -104,11 +109,11 @@
                     Multiplanos
                 </button>
             </a>
-            <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
+            <!-- <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
                 <button>
                     Android
                 </button>
-            </a>
+            </a> -->
             <!-- <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
                 <button>
                     X
@@ -135,11 +140,6 @@
             <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
                 <button>
                     Zap Selling
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
-                <button>
-                    Guia do Programador
                 </button>
             </a>
             <!-- <a href="https://pablo-kennediy.github.io/MUAY-THAI/" target="_blank">
