--- a/index.html
+++ b/index.html
@@ -77,11 +77,17 @@
             <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
                 <button>
                     Barber shop platform
+                    <picture id="miniLogoProjetos">
+                        <img src="logoBarbeiro.png" alt="">
+                    </picture>
                 </button>
             </a>
             <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
                 <button>
                     Guia do Programador
+                    <picture id="miniLogoProjetos">
+                        <img src="logoGuiaDoProgramador.png" alt="">
+                    </picture>
                 </button>
             </a>
             <!-- <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
@@ -92,16 +98,22 @@
             <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
                 <button>
                     Duarte & Santos
+                    <picture id="miniLogoProjetos">
+                        <img src="logoADV.png" alt="">
+                    </picture>
                 </button>
             </a>
             <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
                 <button>
                     Homem-Arranha
+                    <picture id="miniLogoProjetos">
+                        <img src="logoHomemAranha.png" alt="">
+                    </picture>
                 </button>
             </a>
             <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
                 <button>
-                    CRM
+                    CRM                    
                 </button>
             </a>
             <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
