Foco no Index.html
Coloque o botão da Pizzaria, agora é terminar de arrumar essa bagunça.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h1 id="prog">
                 Logo mais abaixo deixamos alguns dos milhares de projetos WEB que já foram finalizados.
             </h1>
-            <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+                      <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
                 <button>
                     Barber shop platform
                     <picture id="miniLogoProjetos">
@@ -152,6 +152,14 @@
             <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
                 <button>
                     Zap Selling
+                </button>
+            </a>
+              <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
+                <button>
+                    Pizzabot
+                    <picture id="miniLogoProjetos">
+                        <img src="logoStevePizza.png" alt="">
+                    </picture>
                 </button>
             </a>
             <!-- <a href="https://pablo-kennediy.github.io/MUAY-THAI/" target="_blank">
