--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h1 id="prog">
                 Logo mais abaixo deixamos alguns dos milhares de projetos WEB que já foram finalizados.
             </h1>
-                      <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+            <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
                 <button>
                     Barber shop platform
                     <picture id="miniLogoProjetos">
@@ -113,7 +113,7 @@
             </a>
             <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
                 <button>
-                    CRM                    
+                    CRM
                 </button>
             </a>
             <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
@@ -152,9 +152,12 @@
             <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
                 <button>
                     Zap Selling
+                                        <picture id="miniLogoProjetos">
+<img src="logo Zap Selling.png" alt="">
+                                        </picture>
                 </button>
             </a>
-              <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
+            <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
                 <button>
                     Pizzabot
                     <picture id="miniLogoProjetos">
@@ -162,6 +165,14 @@
                     </picture>
                 </button>
             </a>
+            <!-- <a href="https://pablo-kennediy.github.io/Acai-Bot/">
+                Açai Bot
+                <button>
+                    <picture id="miniLogoProjetos">
+                        <img src="" alt="">
+                    </picture>
+                </button>
+            </a> -->
             <!-- <a href="https://pablo-kennediy.github.io/MUAY-THAI/" target="_blank">
                 <button>
                     Muay Thai
