--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@
                         NOS-CONTRATE
                     </li>
                 </a>
-                <a href="https://iplis.ru/meu-portifolio">
-                    <li>
-                        NIKE
-                    </li>
-                </a>
             </ul>
         </nav>
     </header>
@@ -52,10 +47,10 @@
             </h1>
             <h2>
                 Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de
-                Desenvolvedores de <strong style="color:black;text-decoration: underline gold;">Sistemas</strong> para
+                Desenvolvedores de <strong style="color:black;text-decoration: underline #517373">Sistemas</strong> para
                 transformar centavos <picture id="dinheiro">
                     <img src="real-brasileiro.png" alt="">
-                </picture> em <strong style="color:black;text-decoration: underline gold;">milhões</strong>
+                </picture> em <strong style="color:black;text-decoration: underline #517373">milhões</strong>
                 <picture id="dinheiro">
                     <img src="financiamento.png" alt="">
                 </picture>
@@ -66,13 +61,17 @@
             <p>
                 Lembrando que negociamos valores em uma reunião diretamente com o Programador
             </p>
+        </section>
+            <section>
             <p>
                 Eles servem para você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
                 que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site
                 profissional' que você a tempos sonha em ter
             </p>
+        </section>
+            <section>
             <h1 id="prog">
-                Logo mais abaixo deixamos alguns dos milhares de projetos WEB que já foram finalizados.
+                Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
             </h1>
             <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
                 <button>
@@ -146,8 +145,21 @@
                     Google Glass
                 </button>
             </a> -->
+        </section>
+            <section>
+            <p style="color: red;">
+                <strong>ATENÇÃO !</strong>
+            </p>
+            <label>
+                RESUMINDO
+                (CRIAMOS PLATAFORMAS PARA
+                INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
+                CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+            </label>
+        </section>
+            <section>
             <h1>
-                Segue abaixo alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimento.
+                Deixamos alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimentoem aberto, caso queira acompanhar.
             </h1>
             <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
                 <button>
@@ -183,16 +195,7 @@
                     Whatsapp Web
                 </button>
             </a> -->
-            <p style="color: red;">
-                <strong>ATENÇÃO !</strong>
-            </p>
-            <label>
-                RESUMINDO
-                (CRIAMOS PLATAFORMAS PARA
-                INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
-                CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
-            </label>
-            <p>
+                        <p>
                 Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
             </p>
             <p>
@@ -203,12 +206,14 @@
 
                     </button>
                 </a> para
-                acessar ao <strong style="color: gold;">formulario</strong> de inscrição.
+                acessar ao <strong style="color:#517373">formulario</strong> de inscrição.
             </p>
+        </section>
+            <section>
             <p>
-                Aqui você vai encontrar um grupo de <strong style="color:gold;">Desenvolvedores, UI x
-                    UX</strong> e estrategistas de trafego <strong style="color: gold;">organico</strong> e
-                <strong style="color:gold;">pago</strong> atuamos principalmente com a venda e revenda
+                Aqui você vai encontrar um grupo de <strong style="color:#517373">Desenvolvedores, UI x
+                    UX</strong> e estrategistas de trafego <strong style="color: #517373">organico</strong> e
+                <strong style="color:#517373">pago</strong> atuamos principalmente com a venda e revenda
                 de
                 scripts ou modelos.
             </p>
@@ -217,12 +222,13 @@
                 computação e uma mistura de
                 engenharia social.
             </p>
+        </section>
+            <section>
             <h1 id="form">
                 <strong>
                     Aguardo ancioso para um entrevista.
                 </strong>
             </h1>
-
             <p>
                 Clique
                 <a href="https://iplis.ru/meu-portifolio" target="_blank">
@@ -230,7 +236,7 @@
                         aqui
                     </button>
                 </a>
-                para ter mais informações do nosso <strong style="color: gold;">Portifolio</strong>
+                para ter mais informações do nosso <strong style="color: #517373">Portifolio</strong>
             </p>
             <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img
                     style="border-radius: 15px;" src="digital.png" alt="digital"></a>
